# dbt-schemify

./: .gitignore  .schemify.yml  README.md  dbt_ast.py  empty_schema.yml  generate.py  log.txt  main.py  pyproject.toml  schema.yml  schema_editor.py  setup.py  transformation.py
.github/workflows/: ci.yml  release.yml
dbt-schemify/dbt-schemify/: dbt_ast.py  main.py  schema_editor.py
dbt_schemify/: db_connector.py  dbt_ast.py  generate.py  main.py  merger.py  schema_editor.py  transformation.py
dbt_schemify/dbt_schemify/: dbt_ast.py  generate.py  ideas.txt  main.py  schema_editor.py  transformation.py
dbt_schemify/examples/: .schemify.yml  empty_schema.yml  manifest.json  schema.yml
tests/: test_dbt_ast.py  test_main.py  test_transformation.py
your_package_name.egg-info/: PKG-INFO  SOURCES.txt
